# serde_urlencoded_xrpc

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
src/: de.rs  lib.rs
src/ser/: mod.rs  value.rs
tests/: test_deserialize.rs  test_serialize.rs
