[package]
name = "serde_urlencoded_xrpc"
version = "0.1.0" # bump in documentation link and in README on update
authors = [
    "Anthony Ramine <n.oxyde@gmail.com>",
    "dataphract <dataphract@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dataphract/serde_urlencoded_xrpc"
# documentation = "https://docs.rs/serde_urlencoded_xrpc/0.1.0/serde_urlencoded_xrpc/"
description = "XRPC-flavored serde_urlencoded"
categories = ["encoding", "web-programming"]
keywords = ["serde", "serialization", "urlencoded", "atproto", "xrpc"]
edition = "2018"
exclude = ["/.github", "rustfmt.toml"]

[dependencies]
form_urlencoded = "1"
itoa = "1"
ryu = "1"
serde = "1.0.69"

[dev-dependencies]
serde_derive = "1"
